name:           safe-decimal
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/fpco/safe-decimal#readme>
homepage:       https://github.com/fpco/safe-decimal#readme
bug-reports:    https://github.com/fpco/safe-decimal/issues
author:         Alexey Kuleshevich
maintainer:     alexey@fpcomplete.com
copyright:      2018-2019 FP Complete
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files: ChangeLog.md
                    README.md

source-repository head
  type: git
  location: https://github.com/fpco/safe-decimal

library
  exposed-modules: Numeric.Decimal
  other-modules: Numeric.Decimal.Internal
  hs-source-dirs: src
  build-depends: base >=4.7 && <5
               , deepseq
               , exceptions
               , scientific
  ghc-options: -Wall
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Numeric.DecimalSpec
  hs-source-dirs: tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , deepseq
               , safe-decimal
               , scientific
               , QuickCheck
               , hspec
  default-language: Haskell2010
