name:           safe-decimal
version:        0.2.2.0
description:    Please see the README on GitHub at <https://github.com/fpco/safe-decimal#readme>
synopsis:       Safe and very efficient arithmetic operations on fixed decimal point numbers
category:       Math, Numeric, Numerical
homepage:       https://github.com/fpco/safe-decimal#readme
bug-reports:    https://github.com/fpco/safe-decimal/issues
author:         Alexey Kuleshevich
maintainer:     alexey@kuleshevi.ch
copyright:      2018-2020 FP Complete, 2021 Alexey Kuleshevich
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files: ChangeLog.md
                    README.md

source-repository head
  type: git
  location: https://github.com/fpco/safe-decimal


library
  exposed-modules: Numeric.Decimal
                 , Numeric.Decimal.BoundedArithmetic
  other-modules: Numeric.Decimal.Internal
  hs-source-dirs: src
  build-depends: base >=4.8 && <5
               , deepseq
               , exceptions
               , scientific
  ghc-options: -Wall
  default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  build-depends: base
               , doctest >=0.16
               , safe-decimal
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Numeric.DecimalSpec
  hs-source-dirs: tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
  build-depends: base >=4.7 && <5
               , deepseq
               , safe-decimal
               , scientific
               , QuickCheck
               , hspec
  default-language: Haskell2010
